@@ -18,70 +18,66 @@
 ## You should have received a copy of the GNU General Public License
 ## along with RcppBDT.  If not, see <http://www.gnu.org/licenses/>.
 
-getBDT <- function() {
-    bdtEnv$bdt
-}
-
 getEndOfBizWeek <- function(date = Sys.Date()) {
     stopifnot(inherits(date, "Date"))
-    bdtEnv$bdt$getEndOfBizWeek(date)
+    bdt$getEndOfBizWeek(date)
 }
 
 getEndOfMonth <- function(date = Sys.Date()) {
     stopifnot(inherits(date, "Date"))
-    bdtEnv$bdt$getEndOfMonth(date)
+    bdt$getEndOfMonth(date)
 }
 
 getYear <- function(date = Sys.Date()) {
     stopifnot(inherits(date, "Date"))
-    bdtEnv$bdt$fromDate(date)
-    bdtEnv$bdt$getYear()
+    bdt$fromDate(date)
+    bdt$getYear()
 }
 
 getMonth <- function(date = Sys.Date()) {
     stopifnot(inherits(date, "Date"))
-    bdtEnv$bdt$fromDate(date)
-    bdtEnv$bdt$getMonth()
+    bdt$fromDate(date)
+    bdt$getMonth()
 }
 
 getDay <- function(date = Sys.Date()) {
     stopifnot(inherits(date, "Date"))
-    bdtEnv$bdt$fromDate(date)
-    bdtEnv$bdt$getDay()
+    bdt$fromDate(date)
+    bdt$getDay()
 }
 
 getDayOfWeek <- function(date = Sys.Date()) {
     stopifnot(inherits(date, "Date"))
-    bdtEnv$bdt$fromDate(date)
-    bdtEnv$bdt$getDayOfWeek()
+    bdt$fromDate(date)
+    bdt$getDayOfWeek()
 }
 
 getDayOfYear <- function(date = Sys.Date()) {
     stopifnot(inherits(date, "Date"))
-    bdtEnv$bdt$fromDate(date)
-    bdtEnv$bdt$getDayOfYear()
+    bdt$fromDate(date)
+    bdt$getDayOfYear()
 }
 
 getIMMDate <- function(mon, year) {     # defined as third Wednesday
-    bdtEnv$bdt$getIMMDate(mon, year)
+    bdt$getIMMDate(mon, year)
 }
 
 getNthDayOfWeek <- function(nthday, dow, mon, year) {
-    bdtEnv$bdt$getNthDayOfWeek(nthday, dow, mon, year)
+    bdt$getNthDayOfWeek(nthday, dow, mon, year)
 }
 
 getLastDayOfWeekInMonth <- function(nthday, mon, year) {
-    bdtEnv$bdt$getLastDayOfWeekInMonth(nthday, mon, year)
+    bdt$getLastDayOfWeekInMonth(nthday, mon, year)
 }
 
 getFirstDayOfWeekInMonth <- function(nthday, mon, year) {
-    bdtEnv$bdt$getFirstDayOfWeekInMonth(nthday, mon, year)
+    bdt$getFirstDayOfWeekInMonth(nthday, mon, year)
 }
 
 getFirstDayOfWeekAfter <- function(dow, date) {
-    bdtEnv$bdt$getFirstDayOfWeekAfter(dow, date)
+    bdt$getFirstDayOfWeekAfter(dow, date)
 }
 
 getLastDayOfWeekBefore <- function(dow, date) {
-    bdtEnv$bdt$getLastDayOfWeekBefore(dow, date)
+    bdt$getLastDayOfWeekBefore(dow, date)
 }
